# gemini_easy_extractor

./: .gitignore  LICENSE  README.md  README.pt-BR.md  example_output.json  meta.txt  pyproject.toml
examples/: main.py  models.py
examples/input/: joao_e_maria.txt  roleplay.txt  syosetu-N3702IR-10.txt
examples/output/: joao_e_maria.json  roleplay.json  syosetu-N3702IR-10.json
gemini_easy_extractor/: pyproject.toml
gemini_easy_extractor/src/google/third_party_gemini_extensions/gemini_easy_extractor/: __init__.py  generation.py  tool_factory.py
src/: example.py  main.py  tools.py
src/syo/: common_models.py  tool_factory.py
utils/: clean_novels.py  zill_names.py
